# ChangeLog for sys-fs/zfs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/zfs/ChangeLog,v 1.26 2012/06/17 17:38:43 ryao Exp $

  17 Jun 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-remove-pfmalloc-1-of-3.patch,
  +files/zfs-0.6.0_rc9-remove-pfmalloc-2-of-3.patch,
  +files/zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch,
  +files/zfs-0.6.0_rc9-use-pushpage.patch, zfs-0.6.0_rc9.ebuild:
  Replace PF_MEMALLOC with KM_PUSHPAGE to fix deadlock issues. This makes swap
  on zvols usable.

  17 Jun 2012; Richard Yao <ryao@gentoo.org> zfs-0.6.0_rc9.ebuild:
  Modify sys-kernel/spl dependency to permit revisions

  17 Jun 2012; Richard Yao <ryao@gentoo.org>
  +files/zfs-0.6.0_rc9-hardened-support.patch, zfs-0.6.0_rc9.ebuild,
  zfs-9999.ebuild:
  Support for sys-kernel/hardened-sources in 0.6.0-rc9, check for
  CONFIG_DEVTMPFS when USE=rootfs and miscellaneous style changes

*zfs-0.6.0_rc9 (16 Jun 2012)

  16 Jun 2012; Richard Yao <ryao@gentoo.org> +zfs-0.6.0_rc9.ebuild,
  zfs-9999.ebuild:
  Introduce ZFS 0.6.0-rc9 without keywords

  17 May 2012;  <richard@gentoo.org> metadata.xml:
  Update maintainer email to use gentoo.org address

  17 May 2012;  <richard@gentoo.org> metadata.xml:
  Changed maintainer from floppym to ryao to reflect change in ryao's dev
  status.

  30 Apr 2012; Mike Gilbert <floppym@gentoo.org> zfs-9999.ebuild:
  Add missing dependency and call linux-mod_pkg_postinst. Patch by Richard Yao.

  22 Apr 2012; Mike Gilbert <floppym@gentoo.org> +files/linuxrc,
  +files/zfs-shutdown, metadata.xml, zfs-9999.ebuild:
  Add zfs-shutdown init script and linuxrc helper script; Introduce rootfs USE
  flag; Fix issue with sys-libs/zlib[static-libs] on Gentoo stable. Patch by
  Richard Yao.

  21 Apr 2012; Mike Gilbert <floppym@gentoo.org> zfs-9999.ebuild:
  Set AUTOTOOLS_AUTORECONF before inherit to generate proper dependencies.
