@@ -6,7 +6,7 @@ AUX zfs-0.6.0_rc9-remove-pfmalloc-3-of-3.patch 2593 RMD160 39225be53d081aad20ae9
 AUX zfs-0.6.0_rc9-use-pushpage.patch 38878 RMD160 16c6fd5ddbcba2961be21a1a640fcddd6a511499 SHA1 b5f4deec2bbe6c0d460591c743626d7d2f422348 SHA256 113d5fef727c34a3254f0556ade3d3f6b0d6069c20a2511dc4ae6409087f1b90
 AUX zfs-shutdown 1252 RMD160 449ba23e29486255bd04d54dfe11b77d414ba6d4 SHA1 108d271dfbe86df47f50a3219c5cf839efe4ce92 SHA256 cba63ddf086044c7e041c296ea86f68a1579ac830b8bea56b9f74b4204f96553
 DIST zfs-0.6.0-rc9.tar.gz 1989469 RMD160 fef1e4e4f0d122be60e3f5b8322e683b8981bac2 SHA1 fc14d86cd0124fd67d2ac80853f9ae078dee9a0d SHA256 a014475fab410caf209e99b448aeffe0070d1d9fc002fb33dd56f73dba87b1fd
-EBUILD zfs-0.6.0_rc9.ebuild 3323 RMD160 a591e47527c1b0fec595dc963c94566ecf54bf17 SHA1 66f2f0f79f10249b7c11991d1a367db151649209 SHA256 42ea87dcaab5e8e3ce01372d59ee3a6686ae62628d22bcec75a19bae418fb606
-EBUILD zfs-9999.ebuild 3074 RMD160 89991908abdd8eba1959e604187ac0823457b2c1 SHA1 e22e106b89a73a8a8d0d6363fc89cc7e084bd394 SHA256 afa3fc06ca4388e2e299689d26a2c9d677ee453e6fc6a9dbfc7cacfceb0dfd73
-MISC ChangeLog 4262 RMD160 8ad0c06c90c6184e07fdf412b515b6f20f986c85 SHA1 5e8f737574b3157790d4ede5a53fc975b267c64b SHA256 49c229086da4b06b8ab071caa15375092ba2523835963e985d9d49faea90225b
+EBUILD zfs-0.6.0_rc9.ebuild 3329 RMD160 fdce6cea007c9eb3074e8953194e1845b466488d SHA1 b1b81fa4e760b334c395a29f88342faf03939c60 SHA256 b862bc880a718a2507399af0f9189df4e398315c5df8514f8660df288a1c456d
+EBUILD zfs-9999.ebuild 3325 RMD160 989845cda4e6b4319b1cb5be9f9616ca22894a70 SHA1 7a2fcdaa941f3b71b06dd63d81dc8a8044739be9 SHA256 7d698455612b03abdd9fb5bca51d01870a28c09a2b9cdb22f2b9ab6b82b6a0e7
+MISC ChangeLog 4366 RMD160 3111330bc464da518a9a0d2ced786b2be965ad0d SHA1 0a61ff7550cdacc65e45d9c229de5542c3167d66 SHA256 e609d02d1ee06074f06fb1da378309399a5dc95cfa772b2a1a7b9c9686e7291a
 MISC metadata.xml 460 RMD160 49a38cd6f7fb8464c06282672932cb5930e024b2 SHA1 2cb49a2c9bd0c05ee136ead608d7ae9a50663384 SHA256 4f32c18bfc4d75883f198b1166ad4f5d7a95deb11eca99d476f305ed31875e7d
